# GPU-Computing-2025-259025

./: .clangd  .gitignore  CMakeLists.txt  README.md  batch.sh  plot17stats.py  plotStats.py  plot_all_stats.py
common/: CMakeLists.txt
common/include/: read.h  timers.h  utils.h
common/src/utils/: read.cpp  timers.cpp  utils.cpp
cpu/: CMakeLists.txt
cpu/include/: read.h  timers.h  utils.h
cpu/results/: 35588_bcsstk31_sorted.mtx_result.txt
cpu/src/program/: cpu_coo.cpp  cpu_coo_struct.cpp  cpu_csr.c  cpu_csr.cpp  cpu_naive.cpp  cpu_naive_columns.cpp  matrixMul_cpu_coo.c  matrixMul_cpu_naive.c  read.h
cpu/src/utils/: read.c  utils.c
gpu/: CMakeLists.txt
gpu/include/: move.h  readcu.h
gpu/src/program/: gpu_coo_add_atomic.cu  gpu_coo_add_atomic_shared_mem.cu  gpu_csr.cu  gpu_csr_coalesced.cu  gpu_csr_constant_memory.cu  gpu_csr_stride.cu  gpu_naive.cu
gpu/src/utils/: move.cu  readcu.cu
matrices/: 1138_bus_sorted.mtx  4884_bcsstk16_sorted.mtx
results/: 10974_bcsstk17_sorted.mtx_result.txt  1138_bus_sorted.mtx_result.txt  36057_onetone1_sorted.mtx_result.txt  4884_bcsstk16_sorted.mtx_result.txt
stats/: cpu_coo1_1138_bus_sorted_stats.json  cpu_coo1_1138_bus_stats.json  cpu_coo2_4884_bcsstk16_sorted_stats.json  cpu_coo2_4884_bcsstk16_stats.json  cpu_coo3_10974_bcsstk17_sorted_stats.json  cpu_coo3_10974_bcsstk17_stats.json  cpu_coo4_36057_onetone1_sorted_stats.json  cpu_coo4_36057_onetone1_stats.json  cpu_coo5_929901_Hardesty2_sorted_stats.json  cpu_coo5_929901_Hardesty2_stats.json  cpu_coo6_923136_Emilia_923_sorted_stats.json  cpu_coo6_923136_Emilia_923_stats.json  cpu_coo7_1000005_webbase_1M_sorted_stats.json  cpu_coo7_1000005_webbase_1M_stats.json  cpu_coo8_525825_mc2depi_sorted_stats.json  cpu_coo8_525825_mc2depi_stats.json  cpu_coo_struct1_1138_bus_sorted_stats.json  cpu_coo_struct1_1138_bus_stats.json  cpu_coo_struct2_4884_bcsstk16_sorted_stats.json  cpu_coo_struct2_4884_bcsstk16_stats.json  cpu_coo_struct3_10974_bcsstk17_sorted_stats.json  cpu_coo_struct3_10974_bcsstk17_stats.json  cpu_coo_struct4_36057_onetone1_sorted_stats.json  cpu_coo_struct4_36057_onetone1_stats.json  cpu_coo_struct5_929901_Hardesty2_sorted_stats.json  cpu_coo_struct5_929901_Hardesty2_stats.json  cpu_coo_struct6_923136_Emilia_923_sorted_stats.json  cpu_coo_struct6_923136_Emilia_923_stats.json  cpu_coo_struct7_1000005_webbase_1M_sorted_stats.json  cpu_coo_struct7_1000005_webbase_1M_stats.json  cpu_coo_struct8_525825_mc2depi_sorted_stats.json  cpu_coo_struct8_525825_mc2depi_stats.json  cpu_csr1_1138_bus_sorted_stats.json  cpu_csr1_1138_bus_stats.json  cpu_csr2_4884_bcsstk16_sorted_stats.json  cpu_csr2_4884_bcsstk16_stats.json  cpu_csr3_10974_bcsstk17_sorted_stats.json  cpu_csr3_10974_bcsstk17_stats.json  cpu_csr4_36057_onetone1_sorted_stats.json  cpu_csr4_36057_onetone1_stats.json  (+74 more)
